--- a/CampoMinado/app/templates/post_list.html
+++ b/CampoMinado/app/templates/post_list.html
@@ -2,6 +2,10 @@
 
         {% block content %}
 
-            <p>Funcionando</p>
+            <h1>Nova Jogada</h1>
+            <form method="POST" class="post-form">{% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="save btn btn-default">salvar</button>
+            </form>
 
         {% endblock %}
