--- a/CampoMinado/app/templates/post_list.html
+++ b/CampoMinado/app/templates/post_list.html
@@ -7,5 +7,24 @@
                 {{ form.as_p }}
                 <button type="submit" class="save btn btn-default">salvar</button>
             </form>
+            <div class="box-body">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Linha </th>
+                        <th>Coluna </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for jogada in jogadas %}
+                    <tr>
+                        <td>{{ jogada.linha }}</td>
+                        <td>{{ jogada.coluna }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
         {% endblock %}
+
