--- a/CampoMinado/app/templates/index.html
+++ b/CampoMinado/app/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 	<br>
 	<h2><p>Defina o tamanho do Campo Minado</p></h2>
-	<h4><p>Informe linha ea coluna para continuar</p></h4>
-
+	<h2><p>ou 0 na linha e 0 na coluna para continuar</p></h2>
+	<h2><p>um jogo anterior.</p></h2>
 	<form  action="partida" method="post">
 		{% csrf_token %}
 		<p>
