--- a/CampoMinado/app/templates/post_list.html
+++ b/CampoMinado/app/templates/post_list.html
@@ -1,30 +1,7 @@
 {% extends 'base.html' %}
 
-        {% block content %}
+{% block content %}
 
-            <h1>Nova Jogada</h1>
-            <form method="POST" class="post-form">{% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit" class="save btn btn-default">salvar</button>
-            </form>
-            <div class="box-body">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Linha </th>
-                        <th>Coluna </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for jogada in jogadas %}
-                    <tr>
-                        <td>{{ jogada.linha }}</td>
-                        <td>{{ jogada.coluna }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+    <p>Funcionando</p>
 
-        {% endblock %}
-
+{% endblock %}
